--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -21,7 +21,7 @@
 
   <% @products.where(sale: true).each do |e| %>
       <div style="text-align:center;margin-bottom:1%;" class="clearfix;">
-        <div style="float:left;width:25%;"><%= e.manufacturer %></div>
+        <div style="float:left;width:25%;"><%= e.sku %></div>
         <div style="float:left;width:35%;"><%= truncate(e.name, length: 100) %></div>
         <div style="float:left;width:20%;">€<%= e.price %></div>
         <div style="float:left;width:20%;"><%= link_to "Show", admin_product_path( e.id ) %></div>
