--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -47,7 +47,7 @@
 			      <%= link_to image_tag('http://ts.liveofficedata.co.uk/' + e.image_url), e %>
 			      <div class="caption">
 			        <h4><%= link_to truncate(e.name, length: 80), e %></h4>
-			        <p><%= link_to e.ts_code, e %></p>
+			        <p><%= link_to e.sku, e %></p>
 			        <p><button class="btn btn-primary">€<%= link_to e.price, e %></button></p>
 			      </div>
 			    </div>
@@ -69,7 +69,7 @@
 			      <%= link_to image_tag('http://ts.liveofficedata.co.uk/' + e.image_url), e %>
 			      <div class="caption">
 			        <h4><%= link_to truncate(e.name, length: 80), e %></h4>
-			        <p><%= link_to e.ts_code, e %></p>
+			        <p><%= link_to e.sku, e %></p>
 			        <p><button class="btn btn-primary">€<%= link_to e.price, e %></button></p>
 			      </div>
 			    </div>
