--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -44,10 +44,9 @@
 			<% @products.where(sale: true).each do |e| %>
 			  <div class="col-sm-6 col-md-3">
 			    <div class="thumbnail">
-			      <%= link_to image_tag('http://ts.liveofficedata.co.uk/' + e.image_url), e %>
+			      <%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + e.image_url + '.jpg'), e %>
 			      <div class="caption">
 			        <h4><%= link_to truncate(e.name, length: 80), e %></h4>
-			        <p><%= link_to e.sku, e %></p>
 			        <p><button class="btn btn-primary">€<%= link_to e.price, e %></button></p>
 			      </div>
 			    </div>
