products index gsub change machine models for desciption for search

--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -26,7 +26,7 @@
   <% @products.each do |product| %>
     <div style="border: 1px groove #999; border-radius: 5px;" class="row">
       <div class="col-md-3">
-          <%= image_tag('http://ts.liveofficedata.co.uk/' + product.image_url, class: 'target_image') %>
+          <%= image_tag('http://www.op-insight.co.uk/images/product/large/' + product.image_url + '.jpg', class: 'target_image') %>
       </div>
 
       <div class="col-md-5">
