--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -34,7 +34,7 @@
         <p>€<%= product.price %></p>
       </div>
       <div class="col-md-4">
-        <h3>Machine Fits</h3>
+        <h3>Description</h3>
         <p><%= product.description.gsub(/(#{@query})/i, '<span class="red">\1</span>').html_safe %></p>
       </div>
     </div>
