--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="col-md-4">
         <h3>Description</h3>
-        <p><%= product.description.gsub(/(#{@query})/i, '<span class="red">\1</span>').html_safe %></p>
+        <p><%= product.short_description.gsub(/(#{@query})/i, '<span class="red">\1</span>').html_safe %></p>
       </div>
     </div>
     <div style="clear:both;height:30px;"></div>
