home image links

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -65,7 +65,7 @@
 			<% @products.where(featured: true).each do |e| %>
 			  <div class="col-sm-6 col-md-3">
 			    <div class="thumbnail">
-			      <%= link_to image_tag('http://ts.liveofficedata.co.uk/' + e.image_url), e %>
+			      <%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + e.image_url + '.jpg'), e %>
 			      <div class="caption">
 			        <h4><%= link_to truncate(e.name, length: 80), e %></h4>
 			        <p><%= link_to e.sku, e %></p>
@@ -87,7 +87,7 @@
 			<% @products.where(latest: true).each do |e| %>
 			  <div class="col-sm-6 col-md-3">
 			    <div class="thumbnail">
-			      <%= link_to image_tag('http://ts.liveofficedata.co.uk/' + e.image_url), e %>
+			      <%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + e.image_url + '.jpg'), e %>
 			      <div class="caption">
 			        <h4><%= link_to truncate(e.name, length: 80), e %></h4>
 			        <p><%= link_to e.sku, e %></p>
