--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -15,7 +15,9 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-default">
+
+
+<nav style="clear:both" class="navbar navbar-default col-md-12">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
