--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -37,10 +37,18 @@
   <div class="container">
     <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
   </div>
+</div>
 
-  <div class="container">
-  <div class="row">
-    <nav class="navbar navbar-default col-md-12">
+
+
+
+
+
+
+
+
+<div>
+  <nav class="navbar navbar-default col-md-12">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -93,6 +101,4 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  </div>
-</div>
 </div>
