--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -47,7 +47,7 @@
 
 
 
-<div>
+<div class="container row">
   <nav class="navbar navbar-default col-md-12">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
