--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -47,8 +47,8 @@
 
 
 
-<div class="container row">
-  <nav class="navbar navbar-default col-md-12">
+<div class="container">
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
