--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -67,13 +67,19 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Office Supplies <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+          <% Spree::Taxonomy.where(id: [17, 16, 12, 18, 13, 21, 20, 15, 19, 30, 31, 32]).each do |t| %>
+            <li>
+            <%= link_to t.name, '#' %>
+            <ul>
+              <% t.taxons.each do |taxon| %>
+              <li>
+                <%= link_to taxon.name, nested_taxons_path(taxon.permalink) %>                  
+              </li>
+              <% end %>
+            </ul>
+          </li>
+          <% end %>
+                        
           </ul>
         </li><!--li class dropdown-->
 
