--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -137,14 +137,15 @@
         <% Spree::Taxonomy.where(id: [17, 16, 12, 18, 13, 21, 20, 15, 19, 30, 31, 32]).each do |t| %>
           <li class="dropdown-submenu">
             <a tabindex="-1" href="#"><%= link_to t.name, '#' %></a>
+
             <ul class="dropdown-menu">
+            <% t.taxons.each do |taxon| %>
               <li class="dropdown-submenu">
-                <a href="#">Even More..</a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">3rd level</a></li>
-                </ul>
+                <%= link_to taxon.name, nested_taxons_path(taxon.permalink) %>
               </li>
+            <% end %>
             </ul>
+
           </li>
         <% end %>
         </ul>
@@ -164,6 +165,7 @@
                 </li>
                 <% end %>
               </ul>
+
             </li>
             <% end %>         
           </ul>
