--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -119,7 +119,7 @@
 
       <li class="dropdown">
             <a id="dLabel" role="button" data-toggle="dropdown"  data-target="#" href="/page.html">
-                Dropdown</span>
+                Dropdown <span class="caret"></span>
             </a>
         <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
         <% Spree::Taxonomy.where(id: [17, 16, 12, 18, 13, 21, 20, 15, 19, 30, 31, 32]).each do |t| %>
