--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -119,7 +119,7 @@
 
       <li class="dropdown">
             <a id="dLabel" role="button" data-toggle="dropdown"  data-target="#" href="/page.html">
-                Dropdown <span class="caret"></span>
+                Office Supplies <span class="caret"></span>
             </a>
         <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
         <% Spree::Taxonomy.where(id: [17, 16, 12, 18, 13, 21, 20, 15, 19, 30, 31, 32]).each do |t| %>
@@ -139,24 +139,26 @@
       </li>
 
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Office Supplies <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% Spree::Taxonomy.where(id: [17, 16, 12, 18, 13, 21, 20, 15, 19, 30, 31, 32]).each do |t| %>
-              <li>
-              <%= link_to t.name, '#' %>
-              <ul>
-                <% t.taxons.each do |taxon| %>
-                <li>
-                  <%= link_to taxon.name, nested_taxons_path(taxon.permalink) %>                  
-                </li>
-                <% end %>
-              </ul>
+      <li class="dropdown">
+            <a id="dLabel" role="button" data-toggle="dropdown"  data-target="#" href="/page.html">
+                Ink &amp; Toner <span class="caret"></span>
+            </a>
+        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+        <% Spree::Taxonomy.where(id: [43]).each do |t| %>
+          <li class="dropdown-submenu">
+            <%= link_to t.name, '#' %>
+            <ul class="dropdown-menu">
+            <% t.taxons.each do |taxon| %>
+              <li class="dropdown-submenu">
+                <%= link_to taxon.name, nested_taxons_path(taxon.permalink) %>
+              </li>
+            <% end %>
+            </ul>
 
-            </li>
-            <% end %>         
-          </ul>
-        </li><!--li class dropdown-->
+          </li>
+        <% end %>
+        </ul>
+      </li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ink &amp; Toner <span class="caret"></span></a>
