image_condition admin products index

--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -136,7 +136,7 @@
       <% @collection.each do |product| %>
           <tr <%== "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
             
-            <td class="image"><%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + product.image_url + '.jpg'), product %></td>
+            <td class="image"><% if product.image_url.nil? %><% else %><%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + product.image_url + '.jpg'), product %><% end %></td>
             <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
             <td class="text-center"><%= product.display_price.to_html rescue '' %></td>
             <td class="actions actions-3 text-right" data-hook="admin_products_index_row_actions">
