images for taxons on shared/products

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -26,7 +26,7 @@
     <% products.each do |product| %>
       <% url = spree.product_url(product, taxon_id: @taxon.try(:id)) %>
 
-      <div id="product_<%= product.id %>" class="col-md-3 col-sm-6 product-list-item" data-hook="products_list_item" itemscope itemtype="https://schema.org/Product">
+      <div id="product_<%= product.id %>" data-hook="products_list_item" itemscope itemtype="https://schema.org/Product">
 
 
 
