--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -40,7 +40,7 @@
               <div class="caption">
                 <h3><%= link_to truncate(product.name, length: 60), url, class: 'info', itemprop: "name", title: product.name %></h3>
                 <span itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                  <span class="price selling lead btn btn-primary" itemprop="price"><%= display_price(product) %></span>
+                  <p><button class="price selling lead btn btn-primary" itemprop="price"><%= display_price(product) %></button></p>
                 </span>
               </div>
             </div>
