--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -38,9 +38,9 @@
             <div class="thumbnail">
               <%= link_to image_tag('http://www.op-insight.co.uk/images/product/large/' + product.image_url + '.jpg'), product %>
               <div class="caption">
-                <h3><%= link_to truncate(product.name, length: 60), url, class: 'info', itemprop: "name", title: product.name %></h3>
+                <h4><%= link_to truncate(product.name, length: 60), url, class: 'info', itemprop: "name", title: product.name %></h4>
                 <span itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                  <p><button class="price selling lead btn btn-primary" itemprop="price"><%= display_price(product) %></button></p>
+                  <p style="text-align:centre"><button class="price selling lead btn btn-primary" itemprop="price"><%= display_price(product) %></button></p>
                 </span>
               </div>
             </div>
