--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -40,7 +40,7 @@
               <div class="caption">
                 <h4><%= link_to truncate(product.name, length: 60), url, class: 'info', itemprop: "name", title: product.name %></h4>
                 <span itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                  <p class="text-center"><button class="price selling lead btn btn-primary" itemprop="price"><%= link_to display_price(product) %></button></p>
+                  <p><button class="btn btn-primary">€<%= link_to e.price, product %></button></p>
                 </span>
               </div>
             </div>
