--- a/app/views/spree/taxons/_taxon.html.erb
+++ b/app/views/spree/taxons/_taxon.html.erb
@@ -1,4 +1,4 @@
 <div class="taxon" data-hook="taxon">
-  <h5 class="subtaxon-title"><%= taxon.name %></h5>
+  <h4 class="subtaxon-title"><%= taxon.name, class: 'makeItRed' %></h4>
   <%= render partial: 'spree/shared/products', locals: { products: taxon_preview(taxon), taxon: taxon } %>
 </div>
